--- a/3-AngularJS-Directives/directive-restriction.html
+++ b/3-AngularJS-Directives/directive-restriction.html
@@ -5,30 +5,19 @@
 
 <w3-test-directive></w3-test-directive>
 
+<div w3-test-directive></div>
+
 <script>
 var app = angular.module("myApp", []);
 app.directive("w3TestDirective", function() {
     return {
+        restrict : "A",
         template : "<h1>Made by a directive!</h1>"
     };
 });
 </script>
 
+<p><strong>Note:</strong> By setting the <strong>restrict</strong> property to "A", only the HTML element with the "w3-test-directive" attribute has invoked the directive.</p>
+
 </body>
 </html>
-
-<!-- Invoke a directive by using:
-
-Element name  
-<w3-test-directive></w3-test-directive>
-
-Attribute
-<div w3-test-directive></div>
-
-Class
-<div class="w3-test-directive"></div>
-
-Comment
-<!-- directive: w3-test-directive -->
---- 
--->
